fix: task label does not overflow

--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -14,6 +14,7 @@
   min-width: 100px;
   display: flex;
   align-items: center;
+  word-break: break-word;
 }
 
 .itemContainer button {
